serve static files

--- a/views/instagaram.ejs
+++ b/views/instagaram.ejs
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Insta/Profile</title>
     <!-- Bootstrap CSS CDN link -->
+   
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <style>
+    <link rel="stylesheet" href="/css/style.css">
+   
+   <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #fafafa;
+           
         }
         .navbar {
             background-color: #fff;
